Try again with single $

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -6,7 +6,7 @@ steps:
       - '-t'
       - 'gcr.io/$PROJECT_ID/ask-the-guidelines:$COMMIT_SHA'
       - '--build-arg'
-      - 'openai_api_key=$$OPENAI_API_KEY'
+      - 'openai_api_key=$OPENAI_API_KEY'
       - '.'
     secretEnv: ['OPENAI_API_KEY']
   # Add latest tag
