Try again but with bash -c

--- a/cloudbuild.yaml
+++ b/cloudbuild.yaml
@@ -1,14 +1,10 @@
 steps:
   # Build container
   - name: 'gcr.io/cloud-builders/docker'
+    entrypoint: bash
     args: 
-      - 'build'
-      - '-t'
-      - 'gcr.io/$PROJECT_ID/ask-the-guidelines:$COMMIT_SHA'
-      - '--build-arg'
-      - 'openai_api_key'
-      - '$$OPENAI_API_KEY'
-      - '.'
+      - "-c"
+      - "docker build -t gcr.io/$PROJECT_ID/ask-the-guidelines:$COMMIT_SHA --build-arg openai_api_key=$$OPENAI_API_KEY ."
     secretEnv: ['OPENAI_API_KEY']
   # Add latest tag
   - name: 'gcr.io/cloud-builders/docker'
